@@ -1,3 +1,10 @@
+2012-06-28  Jakub Jelinek  <jakub@redhat.com>
+
+	* src/dwarf2.h (DW_FORM_GNU_ref_alt,
+	DW_FORM_GNU_strp_alt): Define.
+	* src/dwarf2.c (read_abbrev): Allow those forms.
+	(adjust_attributes): Handle them.
+
 2012-04-10  Jakub Jelinek  <jakub@redhat.com>
 
 	* src/dwarf2.c (DEBUG_MACRO): Define.
